Revision history for Perl extension SVG::TT::Graph.

0.19
  - Fixed warning messages with missing data title (#69691, reported by
    dean@fragfest.com.au, patch by Florent Angly)

0.18 - Thu  5 Jan 2012
  - Added format_x_axis, format_y_axis callback options (Eric Johnson)

0.17 - Wed Jul 20 2011
  - By default, do not compress() or tidy() the SVG
  - Line and Timeseries graphs now have points styled as '.dataPointNN',
    consistently with BarLine graphs (patch from Henrik Pauli, #67834)
  - Added a max_scale_value option to set the maximum value for the Y axis of
    Bar and Line graphs (patch by Bryce and Henrik Pauli, #20475)
  - Repackaged module without extra files (#56718)

0.16 - Sun Apr 18 2010
  - Javascript code in the piechart and timeseries put into a CDATA tag

0.15 - Sat Apr 17 2010  
  - Method get_template() moved from SVG::TT::Graph::* to SVG::TT::Graph to avoid redundancy
  - Fixed bug in get_template(). The DATA filehandle is now read from the beginning
    at each get_template call
  - Makefile.PL does not use autoinstall aymore (not a good practice for CPAN modules)
  - Rollover improvements in piechart

0.14 - Mon Apr 05 2010
  - Fixed some unit tests and the URL of the repository

0.13 - Sat Apr 03 2010
  - Revised TT templates warnings due to undef values (bug # 44115)
  - Fixed the "used only once" warnings (bug # 43854, thank you Ia Hun)
  - Introduced a new method to use random colors instead of the 12 predefined
    colors. Along with the dynamic allocation of the number of style elements,
    this allows an unlimited number of dataseries
  - Added Javascript code to display field name when the mouse rolls over a
    piechart wedge
  - Implemented an optional new method to tidy the formatting of the SVG files
    (using XML::Tidy)
  - Replaced carriage returns by line feeds because it is more portable
    (http://www.webmasterworld.com/forum13/4067.htm)
  - Did documentation, unit testing and packaging revisions